@@ -27,7 +27,7 @@ extractDIC(fit,\dots)
 
 \author{
   Andrew Gelman \email{gelman@stat.columbia.edu};
-  Yu-Sung Su \email{ys463@columbia.edu}
+  Yu-Sung Su \email{suyusung@tsinghua.edu.cn}
 }
 
 
